--- a/client/src/components/right-section/RightSection.module.css
+++ b/client/src/components/right-section/RightSection.module.css
@@ -13,8 +13,9 @@
   height: 28vh;
   background: linear-gradient(
     0deg,
-    rgba(53, 55, 68, 1) 35%,
-    rgba(53, 55, 68, 0.7511598389355743) 59%,
+    rgba(53, 55, 68, 1) 23%,
+    rgba(53, 55, 68, 0.8239889705882353) 45%,
+    rgba(53, 55, 68, 0.6951374299719888) 59%,
     rgba(53, 55, 68, 0) 100%
   );
 }
